--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,16 @@
     <artifactId>hibernate-core</artifactId>
 </dependency>
 
+  <dependency>
+
+      <groupId>org.passay</groupId>
+
+      <artifactId>passay</artifactId>
+
+      <version>1.6.0</version>
+
+  </dependency>
+
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-entitymanager</artifactId>
@@ -114,6 +124,12 @@
     <artifactId>webjars-locator</artifactId>
     <version>0.30</version>
 </dependency>
+
+<dependency>
+<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 				
 	</dependencies>
 	<build>
